// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLinkContainer external link accessibility should be explicitly marked "external" for screen reader users & localised 1`] = `
.c0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

<a
  className="InlineLink-hkwpaz-0 guatGt"
  href="https://www.example.com/"
>
  این لینک هست
  <span
    className="c0"
  >
     ،لینک خارجی
  </span>
</a>
`;

exports[`InlineLinkContainer external link accessibility should be explicitly marked "external" for screen reader users 1`] = `
.c0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

<a
  className="InlineLink-hkwpaz-0 guatGt"
  href="https://www.example.com/"
>
  This is a link
  <span
    className="c0"
  >
    , external
  </span>
</a>
`;

exports[`InlineLinkContainer internal link not matching SPA route should render correctly 1`] = `
<a
  className="InlineLink-hkwpaz-0 guatGt"
  href="https://www.bbc.com/news"
>
  <b>
    This is bold text for a link
  </b>
</a>
`;

exports[`InlineLinkContainer link matching routes for SPA should render correctly 1`] = `
<a
  className="InlineLink-hkwpaz-0-Link LLDYR"
  href="/news/articles/c0g992jmmkko"
  onClick={[Function]}
>
  This is text for an internal link
</a>
`;

exports[`InlineLinkContainer link matching routes for SPA should render correctly for TEST environment 1`] = `
<a
  className="InlineLink-hkwpaz-0-Link LLDYR"
  href="/news/articles/c0g992jmmkko"
  onClick={[Function]}
>
  This is text for an internal link
</a>
`;
